--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,8 +1,10 @@
 /* Global Styles Goes Here... */
 
-@import url("https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.css");
+@import url("https://unpkg.com/bulma@0.8.0/css/bulma.min.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css");
 @import url("./hover.min.css");
+@import url("./helpers.css");
+
 @font-face {
   font-family: "Nexa Bold";
   src: url("../fonts/Nexa_Bold.otf");
@@ -10,4 +12,8 @@
 body {
   font-family: "Nexa Bold";
   height: 100%;
+  color: white !important;
+}
+.text-white{
+    color: white !important;
 }
