--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,6 +14,7 @@ body {
   height: 100%;
   color: white !important;
   background-color: #040127;
+  overflow: hidden;
 }
 .text-white{
     color: white !important;
