Fixed typer color bug

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -50,3 +50,4 @@ body {
   background-color: #02010f !important;
   border-bottom: 1px solid white !important;
 }
+.custom.char.typed{ color: #fff !important; }
